update cartopy example

--- a/Python_Practice/Cartopy_stereo_FFMC.ipynb
+++ b/Python_Practice/Cartopy_stereo_FFMC.ipynb
@@ -51,12 +51,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**data**\n",
+    "\n",
+    "data obtained from WFRT."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = glob('_data/*.zarr.zip')[0] # <--- data obtained from WFRT, not available online"
+    "filename = glob('_data/*.zarr.zip')[0]"
    ]
   },
   {
@@ -93,20 +102,6 @@
     "    xlon = group_io['XLONG'][...]\n",
     "    times = group_io['Time'][...]\n",
     "    F = group_io['F'][...]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spatial to BC\n",
-    "xlon = xlon[:, :450]\n",
-    "xlat = xlat[:, :450]\n",
-    "F = F[..., :450]\n",
-    "\n",
-    "times = times[:7] # test the first 1+6 fcst lead times"
    ]
   },
   {
@@ -149,7 +144,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**loop of 2d figures**"
+    "**loop of 2d figures**\n",
+    "\n",
+    "* That Cartopy starts with your subsetted data in the target region.\n",
+    "* Use `pcolormesh` instead of `contours` and `pcolor`\n",
+    "* Move components out of the loop\n",
+    "* Do not add map features that will be overridden by your data."
    ]
   },
   {
@@ -256,8 +256,13 @@
     }
    ],
    "source": [
-    "# figure params\n",
+    "# subset data into BC\n",
+    "xlon = xlon[:, :450]\n",
+    "xlat = xlat[:, :450]\n",
+    "F = F[..., :450]\n",
+    "times = times[:7] # test the first 1+6 fcst lead times\n",
     "\n",
+    "# figure params\n",
     "minmax = [70.001, 94.999]\n",
     "firemap = plt.cm.nipy_spectral\n",
     "\n",
@@ -267,7 +272,6 @@
     "# US states and CAN-US boundary\n",
     "PROVINCE = cfeature.NaturalEarthFeature(category='cultural', name='admin_1_states_provinces_lines',\n",
     "                                        scale=scale_param, facecolor='none')\n",
-    "\n",
     "proj_ = ccrs.NorthPolarStereo(central_longitude=center_lon)\n",
     "\n",
     "# maskout figure top and create space for the title\n",
@@ -275,7 +279,6 @@
     "mask_lat = np.array([58.7, 63.3, 66, 66])\n",
     "mask_out = proj_.transform_points(ccrs.PlateCarree(), mask_lon, mask_lat)\n",
     "mask_points = np.vstack([mask_out[:, 0], mask_out[:, 1]]).T\n",
-    "\n",
     "\n",
     "# initialization\n",
     "ini_dt = datetime.strptime(ini_time[1:-1], '%Y-%m-%d_%H:%M:%S')\n",
