--- a/Python_Practice/Workflow_debug.ipynb
+++ b/Python_Practice/Workflow_debug.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +105,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@nb.jit(nopython=True)\n",
+    "#@nb.jit(nopython=True)\n",
     "def window_slider(apcp_cadidate, pwat_cadidate, apcp_base, pwat_base, \n",
     "                  hist_day, N_window, size, \n",
     "                  record_single_day, indx_single_day, indy_single_day):\n",
