--- a/EOSC_582/EOSC_582_Assignment_V_SSMI.ipynb
+++ b/EOSC_582/EOSC_582_Assignment_V_SSMI.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "__author__ = 'Yingkai (Kyle) Sha'\n",
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -90,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def single_map(ax):\n",
@@ -148,11 +142,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "#Retrieval functions\n",
+    "# Retrieval functions\n",
     "\n",
     "SSMI.py including functions calculates emissivity and absorption coefficient at at 19 and 37 GHz SSMI channel.\n",
     "\n",
@@ -162,9 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import site\n",
@@ -318,21 +308,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Result **do not** agree with AOS 740 course content. But looks reasonable."
+    "# Full Retrival"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Full Retrival"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##Jan"
+    "## Jan"
    ]
   },
   {
@@ -417,15 +400,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Jul"
+    "## Jul"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TB_obj = h5py.File('_data/bright_temps.h5', 'r')"
@@ -573,7 +554,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -595,9 +579,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
